--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,12 @@
+:root {
+	color-scheme: light dark;
+}
+
 body {
 	font-family: sans-serif;
 	text-align: center;
-	background: #ffffff;
-	color: black;
+	background: var(--background-color);
+	color: var(--color);
 }
 
 #top_links {
@@ -15,24 +19,24 @@ body {
 #top_links li {
 	display: inline-block;
 	font-size: small;
-	color: #3d6a4a;
+	color: var(--accent);
 }
 
 #top_links a {
-	color: #3d6a4a;
+	color: var(--accent);
 	text-decoration: none;
 }
 
 #top_links a:hover {
-	color: #704d37;
+	color: var(--hover);
 	cursor: pointer;
 }
 
 #logo {
 	width: 150px;
-	border: 5px solid #3d6a4a;
+	border: 5px solid var(--accent);
 	border-radius: 50%;
-	background-color: white;
+	background-color: var(--background-color);
 	margin: 32px auto 15px auto;
 	display: inline-block;
 }
@@ -47,22 +51,22 @@ body {
 	display: none;
 	margin: 30px auto auto auto;
 	width: 40%;
-	border: 1px solid #3d6a4a;
+	border: 1px solid var(--accent);
 	border-collapse: collapse;
 }
 
 .results_table tr {
-	background: white;
+	background: var(--background-color);
 }
 
 .results_table tr:nth-child(odd) {
-	background: #eee;
+	background: var(--background-color-alt);
 }
 
 .results_table tr:nth-child(1) {
-	background: #3d6a4a;
-	color: white;
-	border: 1px solid #3d6a4a;
+	background: var(--accent);
+	color: var(--color);
+	border: 1px solid var(--accent);
 }
 
 .results_table td {
@@ -82,8 +86,8 @@ body {
 	outline: none;
 	display: block;
 	margin: 20px auto;
-	background-color: #ffffff;
-	border: 2px solid #3d6a4a;
+	background-color: var(--background-color);
+	border: 2px solid var(--accent);
 	border-radius: 5px;
 }
 
@@ -95,18 +99,18 @@ body {
 }
 
 #searchbutton {
-	background: #3d6a4a;
+	background: var(--accent);
 	font-size: 20px;
 	padding: 5px 8px;
-	border: 1px solid #3d6a4a;
+	border: 1px solid var(--accent);
 	border-radius: 10px;
 	cursor: pointer;
-	color: white;
+	color: var(--background-color);
 }
 
 #searchbutton:hover {
-	background: white;
-	color: #3d6a4a;
+	background: var(--background-color);
+	color: var(--accent);
 }
 
 #highlight_term {
